--- a/templates/index.html
+++ b/templates/index.html
@@ -67,8 +67,9 @@
 
                 <div class="mySlides fade">
                     <div class="slide-text">Groundwater Status: Assessment Year 2023</div>
-                    <img src="{{ url_for('static', filename='2023.jpd') }}" alt="Annual Extraction Trend Graph" style="width:100%">
+                    <img src="{{ url_for('static', filename='2023.jpg') }}" alt="Annual Extraction Trend Graph" style="width:100%">
                 </div>
+
                 
                 <div class="mySlides fade">
                     <div class="slide-text">Groundwater Status: Assessment Year 2022</div>
