FINAL FIX: Force cache bust CSS with v=20251118

--- a/templates/index.html
+++ b/templates/index.html
@@ -693,7 +693,7 @@ body {
             <div class="nav-logo">JIVA <span class="nav-subtitle">Intelligence</span></div>
             <div class="nav-links">
                 <a href="#">Dashboard</a>
-                <a href="https://ingres.iith.ac.in/home" target="_blank">Resources</a>
+                <a href="https://ingres.iith.ac.in/gecdataonline/gis/INDIA;parentLocName=INDIA;locname=INDIA;loctype=COUNTRY;view=ADMIN;locuuid=ffce954d-24e1-494b-ba7e-0931d8ad6085;year=2024-2025;computationType=normal;component=recharge;period=annual;category=safe;mapOnClickParams=false" target="_blank">Resources</a>
             </div>
         </nav>
         
